--- a/src/views/teststruct.html
+++ b/src/views/teststruct.html
@@ -11,11 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body>
-      {{range $key, $val := .s}}
-      <ol>
-        <li>{{$val}}</li>
-      </ol>
-      {{end}}
+        <p>Hello World</p>
     </body>
 
 </html>
