--- a/src/views/index.html
+++ b/src/views/index.html
@@ -185,6 +185,8 @@
                                                 <th>Name</th>
                                                 <th>Domain</th>
                                                 <th>Location</th>
+                                                <th>Env</th>
+                                                <th>Status</th>                                                
                                                 <th>Type</th>
                                                 <th>Version</th>
                                                 <th>URL</th>
@@ -195,6 +197,8 @@
                                                 <th>Name</th>
                                                 <th>Domain</th>
                                                 <th>Location</th>
+                                                <th>Env</th>
+                                                <th>Status</th>                                                  
                                                 <th>Type</th>
                                                 <th>Version</th>
                                                 <th>URL</th>
@@ -206,6 +210,8 @@
                                                 <td>{{.Name}}</td>
                                                 <td>{{.Domain}}</td>
                                                 <td>{{.Location}}</td>
+                                                <td>{{.Environ}}</td>
+                                                <td>{{.Status}}</td>                                                
                                                 <td>{{.Type}}</td>
                                                 <td>{{.Currver}}</td>
                                                 <td>{{.Url}}</td>
