--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -73,6 +73,16 @@ body {
   outline: 0 !important;
 }
 
+.greenFont {
+  font-weight: bold;
+  color: green;
+}
+
+.redFont {
+  font-weight: bold;
+  color: red;
+}
+
 hr {
   box-sizing: content-box;
   height: 0;
