--- a/src/views/index.html
+++ b/src/views/index.html
@@ -218,7 +218,7 @@
                                                 {{end}}
                                                 <td>{{.Type}}</td>
                                                 <td>{{.Currver}}</td>
-                                                <td><a href="{{.Url}}">{{.Url}}</a></td>
+                                                <td><a href="{{.Url}}" target="_blank">{{.Url}}</a></td>
                                             </tr>
                                           {{end}}
                                         </tbody>
