--- a/src/views/index.html
+++ b/src/views/index.html
@@ -126,7 +126,7 @@
                             </div>                            
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Offline:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 140px;">{{.total}}</span></div>
+                                    <div class="card-body">Offline:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 140px;">{{.offline}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
                                         <a class="small text-white stretched-link" href="#">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
