--- a/src/views/index.html
+++ b/src/views/index.html
@@ -119,7 +119,7 @@
                                 <div class="card bg-success text-white mb-4">
                                     <div class="card-body">Total:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 140px;">{{.total}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/all">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
@@ -128,7 +128,7 @@
                                 <div class="card bg-primary text-white mb-4">
                                     <div class="card-body">Offline:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 140px;">{{.offline}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/offline">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
@@ -137,7 +137,7 @@
                                 <div class="card bg-warning text-white mb-4">
                                     <div class="card-body">Needs Update:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 100px;">{{.update}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/update">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                                 <div class="card bg-danger text-white mb-4">
                                     <div class="card-body">Securtiy Warning:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 60px;">{{.security}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/security">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
