--- a/src/views/offline.html
+++ b/src/views/offline.html
@@ -150,7 +150,7 @@
                                                 <td>{{.Location}}</td>
                                                 <td>{{.Type}}</td>
                                                 <td>{{.Currver}}</td>
-                                                <td>{{.Url}}</td>
+                                                <td><a href="{{.Url}}" target="_blank">{{.Url}}</a></td>
                                             </tr>
                                           {{end}}
                                         </tbody>
