--- a/src/views/security.html
+++ b/src/views/security.html
@@ -150,7 +150,7 @@
                                                 <td>{{.Location}}</td>
                                                 <td>{{.Currver}}</td>
                                                 <td><a href="{{.Url}}" target="_blank">{{.Url}}</a></td>
-                                                <td><span style="white-space: pre-line;">{{.Cveids}}</span></td>
+                                                <td><a href="{{https://www.cvedetails.com/cve/.Cveids}}"><span style="white-space: pre-line;">{{.Cveids}}</span></a></td>
                                             </tr>
                                           {{end}}
                                         </tbody>
