--- a/src/views/all.html
+++ b/src/views/all.html
@@ -127,8 +127,13 @@
                                                 <th>Name</th>
                                                 <th>Domain</th>
                                                 <th>Location</th>
+                                                <th>Cluster</th>
+                                                <th>Namespace</th>
+                                                <th>Env</th>
+                                                <th>Status</th>                                                    
                                                 <th>Type</th>
                                                 <th>Version</th>
+                                                <th>Description</th>                                                    
                                                 <th>URL</th>
                                             </tr>
                                         </thead>
@@ -137,8 +142,13 @@
                                                 <th>Name</th>
                                                 <th>Domain</th>
                                                 <th>Location</th>
+                                                <th>Cluster</th>
+                                                <th>Namespace</th>
+                                                <th>Env</th>
+                                                <th>Status</th>                                                    
                                                 <th>Type</th>
                                                 <th>Version</th>
+                                                <th>Description</th>                                                    
                                                 <th>URL</th>
                                             </tr>
                                         </tfoot>
@@ -148,9 +158,18 @@
                                                 <td>{{.Name}}</td>
                                                 <td>{{.Domain}}</td>
                                                 <td>{{.Location}}</td>
+                                                <td>{{.Cluster}}</td>
+                                                <td>{{.Nspace}}</td>                                                
+                                                <td>{{.Environ}}</td>
+                                                {{if eq .Status "Online"}}
+                                                <td style="color:green;font-weight: bold">{{.Status}}</td>
+                                                {{else}}
+                                                <td style="color:red;font-weight: bold">{{.Status}}</td>
+                                                {{end}}
                                                 <td>{{.Type}}</td>
                                                 <td>{{.Currver}}</td>
-                                                <td>{{.Url}}</td>
+                                                <td>{{.Descr}}</td>                                                  
+                                                <td><a href="{{.Url}}" target="_blank">{{.Url}}</a></td>
                                             </tr>
                                           {{end}}
                                         </tbody>
