--- a/src/views/all_grafana.html
+++ b/src/views/all_grafana.html
@@ -110,7 +110,7 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid">
-                        <h1 class="mt-4">Jenkins</h1>
+                        <h1 class="mt-4">Grafana</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active">All</li>
                         </ol>
@@ -127,8 +127,13 @@
                                                 <th>Name</th>
                                                 <th>Domain</th>
                                                 <th>Location</th>
+                                                <th>Cluster</th>
+                                                <th>Namespace</th>
+                                                <th>Env</th>
+                                                <th>Status</th>                                                    
                                                 <th>Type</th>
                                                 <th>Version</th>
+                                                <th>Description</th>                                                    
                                                 <th>URL</th>
                                             </tr>
                                         </thead>
@@ -137,20 +142,34 @@
                                                 <th>Name</th>
                                                 <th>Domain</th>
                                                 <th>Location</th>
+                                                <th>Cluster</th>
+                                                <th>Namespace</th>
+                                                <th>Env</th>
+                                                <th>Status</th>                                                    
                                                 <th>Type</th>
                                                 <th>Version</th>
+                                                <th>Description</th>                                                    
                                                 <th>URL</th>
                                             </tr>
                                         </tfoot>
                                         <tbody>
-                                          {{range .s}}
+                                          {{range .s_grafana}}
                                             <tr>
                                                 <td>{{.Name}}</td>
                                                 <td>{{.Domain}}</td>
                                                 <td>{{.Location}}</td>
+                                                <td>{{.Cluster}}</td>
+                                                <td>{{.Nspace}}</td>                                                
+                                                <td>{{.Environ}}</td>
+                                                {{if eq .Status "Online"}}
+                                                <td style="color:green;font-weight: bold">{{.Status}}</td>
+                                                {{else}}
+                                                <td style="color:red;font-weight: bold">{{.Status}}</td>
+                                                {{end}}
                                                 <td>{{.Type}}</td>
                                                 <td>{{.Currver}}</td>
-                                                <td>{{.Url}}</td>
+                                                <td>{{.Descr}}</td>                                                  
+                                                <td><a href="{{.Url}}" target="_blank">{{.Url}}</a></td>
                                             </tr>
                                           {{end}}
                                         </tbody>
