--- a/src/views/index.html
+++ b/src/views/index.html
@@ -160,7 +160,7 @@
                                 <div class="card bg-success text-white mb-4">
                                     <div class="card-body">Total:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 140px;">{{.total_grafana}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="/toolzilla/all">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/allgrafana">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
@@ -169,7 +169,7 @@
                                 <div class="card bg-primary text-white mb-4">
                                     <div class="card-body">Offline:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 140px;">{{.offline_grafana}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="/toolzilla/offline">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/offlinegrafana">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
@@ -178,7 +178,7 @@
                                 <div class="card bg-warning text-white mb-4">
                                     <div class="card-body">Needs Update:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 90px;">{{.update_grafana}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="/toolzilla/update">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/updategrafana">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
@@ -187,7 +187,7 @@
                                 <div class="card bg-danger text-white mb-4">
                                     <div class="card-body">Securtiy Warning:    <span style="color:white;font-weight: bold;font-size: 2rem;margin-left: 60px;">{{.security_grafana}}</span></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="/toolzilla/security">View Details</a>
+                                        <a class="small text-white stretched-link" href="/toolzilla/securitygrafana">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
