--- a/src/views/index.html
+++ b/src/views/index.html
@@ -112,7 +112,7 @@
                     <div class="container-fluid">
                         <h1 class="mt-4">Tool Dashboard</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Jenkins</li>
+                            <li class="breadcrumb-item active"><span style="font-weight: bold;font-size: 1rem;">Jenkins</span></li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Grafana</li>
+                            <li class="breadcrumb-item active"><span style="font-weight: bold;font-size: 1rem;">Grafana</span></li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
