--- a/src/views/index.html
+++ b/src/views/index.html
@@ -112,7 +112,12 @@
                     <div class="container-fluid">
                         <h1 class="mt-4">Tool Dashboard</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active"><span style="height: 1rem;"><img src="/toolzilla/static/img/jenkins-header-logo-v2.svg" alt="[Jenkins]"></span><span style="font-weight: bold;font-size: 1rem;">Jenkins</span></li>
+                            <li class="breadcrumb-item active">
+                              <a>
+                                <img style="height: 2rem;" src="/toolzilla/static/img/jenkins-header-logo-v2.svg" alt="[Jenkins]">
+                                <span style="font-weight: bold;font-size: 1rem;">Jenkins</span>
+                              </a>                               
+                            </li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
@@ -153,7 +158,12 @@
                             </div>
                         </div>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active"><span style="font-weight: bold;font-size: 1rem;">Grafana</span></li>
+                            <li class="breadcrumb-item active">
+                              <a>
+                                <img style="height: 2rem;" src="/toolzilla/static/img/grafana_icon.svg" alt="[Grafana]">
+                                <span style="font-weight: bold;font-size: 1rem;">Grafana</span>
+                              </a>                                
+                            </li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
