--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,10 +10,14 @@
         <link href="/toolzilla/static/css/styles.css" rel="stylesheet" />
         <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="/toolzilla/static/img/toolzilla.png">        
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="/toolzilla/">ToolZilla</a>
+            <a class="navbar-brand" href="/toolzilla/">
+                <img style="height: 2.2rem;" src="/toolzilla/static/img/toolzilla.png" alt="[ToolZilla]">
+                ToolZilla
+            </a>
             <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
